--- a/index.html
+++ b/index.html
@@ -5,21 +5,37 @@
 	<title>Портфолио</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="image/favicon.png" type="image/x-icon">
-	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+	<!--<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">-->
+	<link rel='stylesheet' href='css/jquery.reject.css'>
 	<link rel='stylesheet' href='css/style.css'>
 	<link rel='stylesheet' href='css/media.css'>
 	<script src="js/jquery-1.12.0.min.js"></script>
-	<script src="bootstrap/js/bootstrap.min.js"></script>
+	<script src="js/jquery.reject.js"></script>
+	<script src="js/ie.js"></script>
+	<!--<script src="bootstrap/js/bootstrap.min.js"></script>-->
 	<script src="js/main.js"></script>
 </head>
 <body>
 <header>
-
+	<div class="container">
+		<nav>
+			<ul>
+				<li class="itemMenu"><a href=".">ПОРТФОЛИО</a></li>
+				<li class="itemMenu"><a href=".">КОНТАКТЫ</a></li>
+				<li class="phone">8 911 161 22 25</li>
+			</ul>
+		</nav>
+	</div>
 </header>
+
 <main class="wrapper">
+	<section class="topWrapper">
 
+	</section>
 
+	<section class="projectsWrapper">
 
+	</section>
 </main>
 
 </body>
