--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="image/favicon.png" type="image/x-icon">
 	<!--<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">-->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel='stylesheet' href='css/jquery.reject.css'>
 	<link rel='stylesheet' href='css/style.css'>
 	<link rel='stylesheet' href='css/media.css'>
@@ -19,12 +20,25 @@
 <header>
 	<div class="container">
 		<nav>
-			<ul>
-				<li class="itemMenu"><a href=".">ПОРТФОЛИО</a></li>
-				<li class="itemMenu"><a href=".">КОНТАКТЫ</a></li>
-				<li class="phone">8 911 161 22 25</li>
-			</ul>
+			<span class="fa fa-bars"></span>
+
+			<div class="menuWrap">
+				<ul class="menu">
+					<li class="itemMenu"><a href=".">ПОРТФОЛИО</a></li>
+					<li class="itemMenu"><a href=".">КОНТАКТЫ</a></li>
+					<!--<li class="phone"></li>-->
+				</ul>
+				<p class="phone">8 911 161 22 25</p>
+			</div>
+
+			<div>
+				<ul class="menuMobile">
+					<li><a href=".">ПОРТФОЛИО</a></li>
+					<li><a href=".">КОНТАКТЫ</a></li>
+				</ul>
+			</div>
 		</nav>
+
 	</div>
 </header>
 
