--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 				<p class="phone">8 911 161 22 25</p>
 			</div>
 
-			<div>
-				<ul class="menuMobile">
-					<li><a href=".">ПОРТФОЛИО</a></li>
-					<li><a href=".">КОНТАКТЫ</a></li>
-				</ul>
-			</div>
+
+				<div class="menuMobile">
+					<a href="."><p>ПОРТФОЛИО</p></a>
+					<a href="."><p>КОНТАКТЫ</p></a>
+				</div>
+
 		</nav>
 
 	</div>
