--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<title>Портфолио</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="image/favicon.png" type="image/x-icon">
-	<!--<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel='stylesheet' href='css/jquery.reject.css'>
 	<link rel='stylesheet' href='css/style.css'>
@@ -13,7 +12,6 @@
 	<script src="js/jquery-1.12.0.min.js"></script>
 	<script src="js/jquery.reject.js"></script>
 	<script src="js/ie.js"></script>
-	<!--<script src="bootstrap/js/bootstrap.min.js"></script>-->
 	<script src="js/main.js"></script>
 </head>
 <body>
@@ -26,30 +24,36 @@
 				<ul class="menu">
 					<li class="itemMenu"><a href=".">ПОРТФОЛИО</a></li>
 					<li class="itemMenu"><a href=".">КОНТАКТЫ</a></li>
-					<!--<li class="phone"></li>-->
 				</ul>
 				<p class="phone">8 911 161 22 25</p>
 			</div>
-
-
-				<div class="menuMobile">
-					<a href="."><p>ПОРТФОЛИО</p></a>
-					<a href="."><p>КОНТАКТЫ</p></a>
-				</div>
-
+			<div class="menuMobile">
+				<a href="."><p>ПОРТФОЛИО</p></a>
+				<a href="."><p>КОНТАКТЫ</p></a>
+			</div>
 		</nav>
-
 	</div>
 </header>
 
 <main class="wrapper">
-	<section class="topWrapper">
 
+	<section class="topWrapper">
+		<div class="container">
+			<h1 class="">ПОРТФОЛИО</h1>
+
+			<div class="infoTopWrapper">
+				<p>
+					Представленные проекты создавались мной в личных целях для отработки практических
+					навыков, названия компаний вымышлены и не имеют ничего общего с реально существующими.
+				</p>
+			</div>
+		</div>
 	</section>
 
 	<section class="projectsWrapper">
-
+		<div class="container"></div>
 	</section>
+
 </main>
 
 </body>
