--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel='stylesheet' href='css/jquery.reject.css'>
 	<link rel='stylesheet' href='css/style.css'>
 	<link rel='stylesheet' href='css/media.css'>
+	<link rel='stylesheet' href='css/ie.css'>
 	<script src="js/jquery-1.12.0.min.js"></script>
 	<script src="js/jquery.reject.js"></script>
 	<script src="js/ie.js"></script>
@@ -39,15 +40,17 @@
 
 	<section class="topWrapper">
 		<div class="container">
-			<h1 class="">ПОРТФОЛИО</h1>
+			<!--<div class="contentTopWrapper">-->
+				<h1 class="">ПОРТФОЛИО</h1>
 
-			<div class="infoTopWrapper">
-				<p>
-					Представленные проекты создавались мной в личных целях для отработки практических
-					навыков, названия компаний вымышлены и не имеют ничего общего с реально существующими.
-				</p>
+				<div class="infoTopWrapper">
+					<p>
+						Представленные проекты создавались мной в личных целях для отработки практических
+						навыков, названия компаний вымышлены и не имеют ничего общего с реально существующими.
+					</p>
+				</div>
 			</div>
-		</div>
+		<!--</div>-->
 	</section>
 
 	<section class="projectsWrapper">
