--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
 
 	<section class="topWrapper">
 		<div class="container">
-			<!--<div class="contentTopWrapper">-->
 				<h1 class="">ПОРТФОЛИО</h1>
-
 				<div class="infoTopWrapper">
 					<p>
 						Представленные проекты создавались мной в личных целях для отработки практических
@@ -50,11 +48,44 @@
 					</p>
 				</div>
 			</div>
-		<!--</div>-->
 	</section>
 
 	<section class="projectsWrapper">
-		<div class="container"></div>
+		<div class="container">
+			<article class="itemProjects">
+				<div class="textItemProjects">
+					<h2>Музыкальная школа "Виртуозы"</h2>
+						<p>Landing Page</p>
+						<a href="http://musicschool.alenaitunina.ru" target="_blank">Перейти на сайт</a>
+				</div>
+				<div class="imageItemProjects">
+					<img src="image/mus.png" alt="пример сайта">
+				</div>
+			</article>
+
+			<article class="itemProjects">
+				<div class="textItemProjects">
+					<h2>Изделия из кожи "STAYN"</h2>
+					<p>Интернет-магазин на CMS Joomla</p>
+					<a href="http://musicschool.alenaitunina.ru" target="_blank">Перейти на сайт</a>
+				</div>
+				<div class="imageItemProjects">
+					<img src="image/leather.png" alt="пример сайта">
+				</div>
+			</article>
+
+			<article class="itemProjects">
+				<div class="textItemProjects">
+					<h2>Коттеджные посёлки "Амурские зори"</h2>
+					<p>Сайт-визитка</p>
+					<a href="http://musicschool.alenaitunina.ru" target="_blank">Перейти на сайт</a>
+				</div>
+				<div class="imageItemProjects">
+					<img src="image/amz.png" alt="пример сайта">
+				</div>
+			</article>
+
+		</div>
 	</section>
 
 </main>
