--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
 			<div class="menuWrap">
 				<ul class="menu">
-					<li class="itemMenu"><a href=".">ПОРТФОЛИО</a></li>
-					<li class="itemMenu"><a href=".">КОНТАКТЫ</a></li>
+					<li class="itemMenu"><a href="#projects" class="topLink">ПОРТФОЛИО</a></li>
+					<li class="itemMenu"><a href="#contacts" class="topLink">КОНТАКТЫ</a></li>
 				</ul>
 				<p class="phone">8 911 161 22 25</p>
 			</div>
 			<div class="menuMobile">
-				<a href="."><p>ПОРТФОЛИО</p></a>
-				<a href="."><p>КОНТАКТЫ</p></a>
+				<a href="#projects" class="topLink"><p>ПОРТФОЛИО</p></a>
+				<a href="#contacts" class="topLink"><p>КОНТАКТЫ</p></a>
 			</div>
 		</nav>
 	</div>
@@ -40,23 +40,27 @@
 
 	<section class="topWrapper">
 		<div class="container">
-				<h1 class="">ПОРТФОЛИО</h1>
-				<div class="infoTopWrapper">
-					<p>
-						Представленные проекты создавались мной в личных целях для отработки практических
-						навыков, названия компаний вымышлены и не имеют ничего общего с реально существующими.
-					</p>
-				</div>
+			<h1 class="">ПОРТФОЛИО</h1>
+
+			<div class="infoTopWrapper">
+				<p>
+					Представленные проекты создавались мной в личных целях для отработки практических
+					навыков, названия компаний вымышлены и не имеют ничего общего с реально существующими.
+				</p>
 			</div>
+		</div>
 	</section>
 
-	<section class="projectsWrapper">
+	<section class="projectsWrapper" id="projects">
+		<h2 class="titleProjectsWrapper">Портфолио</h2>
+
 		<div class="container">
 			<article class="itemProjects">
 				<div class="textItemProjects">
 					<h2>Музыкальная школа "Виртуозы"</h2>
-						<p>Landing Page</p>
-						<a href="http://musicschool.alenaitunina.ru" target="_blank">Перейти на сайт</a>
+
+					<p>Landing Page</p>
+					<a href="http://musicschool.alenaitunina.ru" target="_blank">Перейти на сайт</a>
 				</div>
 				<div class="imageItemProjects">
 					<img src="image/mus.png" alt="пример сайта">
@@ -66,6 +70,7 @@
 			<article class="itemProjects">
 				<div class="textItemProjects">
 					<h2>Изделия из кожи "STAYN"</h2>
+
 					<p>Интернет-магазин на CMS Joomla</p>
 					<a href="http://musicschool.alenaitunina.ru" target="_blank">Перейти на сайт</a>
 				</div>
@@ -77,6 +82,7 @@
 			<article class="itemProjects">
 				<div class="textItemProjects">
 					<h2>Коттеджные посёлки "Амурские зори"</h2>
+
 					<p>Сайт-визитка</p>
 					<a href="http://musicschool.alenaitunina.ru" target="_blank">Перейти на сайт</a>
 				</div>
@@ -85,6 +91,16 @@
 				</div>
 			</article>
 
+		</div>
+	</section>
+	<section class="wrapperContacts" id="contacts">
+		<div class="container">
+			<div class="contacts">
+				<h2>Контакты</h2>
+
+				<div><span class="fa fa-envelope"></span><span>itunina.alena@gmail.com</span></div>
+				<div><span class="fa fa-phone"></span><span>8 911 161 22 25</span></div>
+			</div>
 		</div>
 	</section>
 
