--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<h2>Изделия из кожи "STAYN"</h2>
 
 					<p>Интернет-магазин на CMS Joomla</p>
-					<a href="http://musicschool.alenaitunina.ru" target="_blank">Перейти на сайт</a>
+					<a href="http://stayn-leather.alenaitunina.ru" target="_blank">Перейти на сайт</a>
 				</div>
 				<div class="imageItemProjects">
 					<img src="image/leather.png" alt="пример сайта">
@@ -84,7 +84,7 @@
 					<h2>Коттеджные посёлки "Амурские зори"</h2>
 
 					<p>Сайт-визитка</p>
-					<a href="http://musicschool.alenaitunina.ru" target="_blank">Перейти на сайт</a>
+					<a href="http://am-zori.alenaitunina.ru" target="_blank">Перейти на сайт</a>
 				</div>
 				<div class="imageItemProjects">
 					<img src="image/amz.png" alt="пример сайта">
