--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<a href="http://musicschool.alenaitunina.ru" target="_blank">Перейти на сайт</a>
 				</div>
 				<div class="imageItemProjects">
-					<img src="image/mus.png" alt="пример сайта">
+					<img src="image/mus.png" alt="пример сайта" />
 				</div>
 			</article>
 
@@ -75,7 +75,7 @@
 					<a href="http://stayn-leather.alenaitunina.ru" target="_blank">Перейти на сайт</a>
 				</div>
 				<div class="imageItemProjects">
-					<img src="image/leather.png" alt="пример сайта">
+					<img src="image/leather.png" alt="пример сайта" />
 				</div>
 			</article>
 
@@ -87,7 +87,7 @@
 					<a href="http://am-zori.alenaitunina.ru" target="_blank">Перейти на сайт</a>
 				</div>
 				<div class="imageItemProjects">
-					<img src="image/amz.png" alt="пример сайта">
+					<img src="image/amz.png" alt="пример сайта" />
 				</div>
 			</article>
 
